[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Hud.gd" type="Script" id=1]
[ext_resource path="res://Fontes/NgombeHud.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/plantas/plant10.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Piment√£o.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Tomate.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Beringela.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Milho.png" type="Texture" id=7]

[node name="Gui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -550.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 22.0
margin_right = 1004.0
margin_bottom = 65.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 984.0
margin_bottom = 24.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/HBoxContainer"]
margin_right = 228.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HBoxContainer/HBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 105.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 2 )
text = "SEMENTES"

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 109.0
margin_right = 133.0
margin_bottom = 24.0
texture_normal = ExtResource( 3 )

[node name="TextureButton2" type="TextureButton" parent="HBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 137.0
margin_right = 154.0
margin_bottom = 24.0
texture_normal = ExtResource( 4 )

[node name="TextureButton3" type="TextureButton" parent="HBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 158.0
margin_right = 179.0
margin_bottom = 24.0
texture_normal = ExtResource( 5 )

[node name="TextureButton4" type="TextureButton" parent="HBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 183.0
margin_right = 202.0
margin_bottom = 24.0
texture_normal = ExtResource( 6 )

[node name="TextureButton5" type="TextureButton" parent="HBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 206.0
margin_right = 228.0
margin_bottom = 24.0
texture_normal = ExtResource( 7 )
[connection signal="pressed" from="HBoxContainer/HBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/HBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/HBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/HBoxContainer/TextureButton4" to="." method="_on_TextureButton4_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/HBoxContainer/TextureButton5" to="." method="_on_TextureButton5_pressed"]
